--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -96,8 +96,8 @@
   font-style: italic;
 }
 
-.bg-grey {
-  background-color: #2f3743;
+.width-256 {
+  width: 256px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
