--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -100,6 +100,10 @@
   width: 256px;
 }
 
+.width-32 {
+  width: 32px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
