--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -100,8 +100,16 @@
   width: 256px;
 }
 
+.width-48 {
+  width: 48px;
+}
+
 .width-32 {
   width: 32px;
+}
+
+.width-28 {
+  width: 28px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
