--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -40,62 +40,6 @@
   scrollbar-width: none;
 }
 
-.lora-regular {
-  font-family: "Lora", serif;
-  font-optical-sizing: auto;
-  font-size: 1.2rem;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.merriweather-light {
-  font-family: "Merriweather", serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.merriweather-light-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.merriweather-regular {
-  font-family: "Merriweather", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.merriweather-regular-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.merriweather-bold {
-  font-family: "Merriweather", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.merriweather-bold-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.merriweather-black {
-  font-family: "Merriweather", serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.merriweather-black-italic {
-  font-family: "Merriweather", serif;
-  font-weight: 900;
-  font-style: italic;
-}
-
 .width-256 {
   width: 256px;
 }
@@ -110,6 +54,10 @@
 
 .width-28 {
   width: 28px;
+}
+
+.height-128 {
+  height: 128px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
